[project]
name = "pix2pix-wgangp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "lucatirel", email = "lucatirel96@gmail.com"},
]
dependencies = [
    "torch<2.3.0",
    "tensorboard>=2.16.2",
    "pytorch-msssim>=1.0.0",
    "alive-progress>=3.1.5",
    "opencv-python>=4.9.0.80",
    "torchsummary>=1.5.1",
    "torchvision>=0.17.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
